Remove gen files
